--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "flickity": "^2.2.0",
+    "gsap": "^3.10.4",
     "heroku-cli": "^6.15.31",
     "next": "12.2.2",
     "react": "18.2.0",
