--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-i18next": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fade-in": "^2.0.1",
     "react-flickity-component": "^3.6.2",
     "react-scroll": "^1.8.7",
     "yarn-audit-fix": "^9.3.3"
