--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "flickity": "^2.2.0",
+    "fs": "^0.0.1-security",
     "gsap": "^3.10.4",
     "heroku-cli": "^6.15.31",
     "next": "12.2.2",
+    "next-i18next": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fade-in": "^2.0.1",
     "react-flickity-component": "^3.6.2",
     "react-scroll": "^1.8.7",
     "yarn-audit-fix": "^9.3.3"
