--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "flickity": "^2.2.0",
+    "friendly-challenge": "^0.9.7",
     "fs": "^0.0.1-security",
     "gsap": "^3.10.4",
     "heroku-cli": "^6.15.31",
