--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@kunukn/react-collapse": "^2.2.9",
     "@popperjs/core": "^2.11.5",
+    "axios": "^1.1.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "flickity": "^2.2.0",
