--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "flickity": "^2.2.0",
     "friendly-challenge": "^0.9.7",
     "fs": "^0.0.1-security",
-    "gsap": "npm:@gsap/shockingly",
+    "gsap": "^3.10.4",
     "heroku-cli": "^6.15.31",
     "next": "12.2.2",
     "next-i18next": "^11.3.0",
