--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
+always-auth=true
 //npm.greensock.com/:_authToken=e629cdec-953c-4d94-bea3-83ac56a9e1e6
 @gsap:registry=https://npm.greensock.com
+save-exact=true
